Homework 1 (Week 3) is completed

--- a/report.tex
+++ b/report.tex
@@ -1,5 +1,5 @@
 \documentclass{article}
-
+\usepackage{graphicx}
 \usepackage{amsthm}
 \usepackage{amsfonts}
 \usepackage{amsmath}
@@ -60,18 +60,32 @@
 \maketitle
 
 \begin{abstract}
-Short  summary of purpose and content.  
+Consisting of CPSC 406 Material at Chapman University with Professor Alexander Kurz. This report will include an Introduction, Weekly Homework, and a Paper on the group project, which is done throughout the semester. 
 \end{abstract}
 
 \tableofcontents
 
 \section{Introduction}\label{intro}
+This report...
 
 \section{Homework}\label{homework}
 
 This section contains solutions to homework. 
 
-\subsection{Week 2}
+\subsection{Week 2/3 (Homework 1)}
+This week's homework was to solve the following NFA:\noindent\newline
+\includegraphics[scale=0.8]{a}\noindent\newline
+\noindent\newline This is the following NFA but drawn out:
+
+\includegraphics[scale=0.2]{nfa}\noindent\newline
+
+From this NFA, the following DFA table can be made:\noindent\newline
+\includegraphics[scale=0.8]{b}\noindent\newline
+
+\includegraphics[scale=0.2]{dfa}\noindent\newline
+
+\noindent\newline\newline This DFA diagram will allow for the correct initial state, final states, and correct path for each input.
+
 
 \subsection{Week 3}
 
